error.txt
    Checking mugin_widgets v0.1.0 (C:\Users\sarib\Desktop\HakanCalismalar\Rust\MuginCAD\crates\mugin_widgets)
error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> crates\mugin_widgets\src\hierarchy.rs:101:21
    |
101 |             painter.galley(rect.min + egui::vec2(5.0, 2.5), galley);
    |                     ^^^^^^----------------------------------------- argument #3 of type `Color32` is missing
    |
note: method defined here
   --> C:\Users\sarib\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.29.1\src\painter.rs:533:12
    |
533 |     pub fn galley(&self, pos: Pos2, galley: Arc<Galley>, fallback_color: Color32) {
    |            ^^^^^^
help: provide the argument
    |
101 |             painter.galley(rect.min + egui::vec2(5.0, 2.5), galley, /* Color32 */);
    |                                                                   +++++++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `mugin_widgets` (lib) due to 1 previous error
